# outils

./: CMakeLists.txt  LICENSE  README.md
include/outils/: outils.h
src/: outils.cpp
tests/: CMakeLists.txt
tests/src/: main.cpp
